<resources>
    <string name="web_client_id">565328595017-qcrdqt9i330kh6sni1bblmr44nnnl7m6.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1920147068087911</string>
    <string name="fb_login_protocol_scheme">fb1920147068087911</string>
    <string name="app_name">Drugvilla</string>
    <string name="please_wait">Please wait…</string>
    <string name="preparing_card">prepare card</string>
    <string name="no_storage_card">no storage card</string>
    <string name="not_enough_space">not enough space</string>
    <string name="saving_image">Image saving</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="no_response">No response</string>
    <string name="failure">Failure</string>
    <string name="crop">Crop</string>
    <string name="from_gallery">From Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="title">Title</string>
    <string name="Search">Search</string>
    <string name="copyrignt_2015_drugvilla_com">Copyrignt@2020 Drugvilla.com</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="menu_home">Home</string>
    <string name="menu_finddoctors">Find Doctors</string>
    <string name="menu_medicines">Medicines</string>
    <string name="menu_labs">Labs</string>
    <string name="menu_upload_prescription">Upload Prescription</string>
    <string name="contact_us">Contact Us</string>
    <string name="_2015_drugvilla_com_all_rights_reserved">2020 © Drugvilla.com - All Rights Reserved.</string>
    <string name="submit">Submit</string>
    <string name="choose_image">Choose Image</string>
    <string name="name">Full Name</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile Number</string>
    <string name="address">Address</string>
    <string name="pinCode">Pin Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="price">Price</string>
    <string name="product_name">Product Name</string>
    <string name="Rs">\u20B9</string>
    <string name="MRP">MRP  \u20B9</string>
    <string name="terms_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="signup"><u>Signup</u></string>
    <string name="label_name">Name</string>
    <string name="mobile_email">Mobile number/Email</string>
    <string name="empty_name">Please enter name.</string>
    <string name="invalid_name">Please enter valid name.</string>
    <string name="empty_email">Please enter email.</string>
    <string name="invalid_email">Please enter valid email.</string>
    <string name="empty_old_password">Please enter old password.</string>
    <string name="invalid_password">Please enter valid password.</string>
    <string name="empty_new_password">Please enter new password.</string>
    <string name="password_not_match">Password and confirm password does not match.</string>
    <string name="empty_email_mobile">Please enter your mobile number or email id.</string>
    <string name="invalid_mobile">Please enter valid mobile number.</string>
    <string name="invalid_code">Please enter valid code.</string>
    <string name="empty_code">Please enter the code generated by authenticator app.</string>
    <string name="invalid_otp">Please enter valid OTP</string>
    <string name="empty_otp">Please enter OTP.</string>
    <string name="empty_password">Please enter password.</string>
    <string name="empty_mobile">Please enter mobile number.</string>
    <string name="empty_patient_name">Please enter patient\'s name.</string>
    <string name="empty_patient_age">Please enter patient\'s age.</string>
    <string name="empty_gender">Please select gender.</string>
    <string name="invalid_landmark">Please enter valid landmark.</string>
    <string name="empty_landmark">Please enter landmark.</string>
    <string name="invalid_address">Please enter valid address.</string>
    <string name="empty_address">Please enter address.</string>
    <string name="invalid_city">Please enter valid city.</string>
    <string name="empty_city">Please enter city.</string>
    <string name="invalid_pincode">Please enter valid pincode.</string>
    <string name="empty_pincode">Please enter pincode.</string>
    <string name="empty_referalcode">Please enter referral code.</string>
    <string name="empty_comment">Please enter comment.</string>
    <string name="invalid_comment">Your comment should be greater than 8 characters.</string>
    <string name="invalid_message">Please enter valid message.</string>
    <string name="empty_message">Please enter message.</string>
    <string name="empty_review">Please enter your review.</string>
    <string name="invalid_review">Your review should be greater than 10 characters.</string>
    <string name="terms_and_conditions">By signing up or logging in, you agree to our <u>Terms and Conditions</u></string>
    <string name="already_user">Have an account? Login</string>
    <string name="skip">Skip</string>
    <string name="have_a_referral_code"><u>Have a referral code?</u></string>
    <string name="referral_code">Referral Code</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="otp">OTP</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="new_user_sign_up">New user? Sign up</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="send_otp">Send OTP</string>
    <string name="resetPassword">Reset Password</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="proceed">Proceed</string>
    <string name="upload_valid_prescription">Upload Valid Prescription</string>
    <string name="receive_confirmation_call">Receive confirmation call</string>
    <string name="delivery_at_doorstep">Delivery at doorstep</string>
    <string name="follow_3_easy_steps_to_order_your_medicines">Follow 3 easy steps to order your medicines</string>
    <string name="help">Help</string>
    <string name="add_address">Add Address</string>
    <string name="save">Save</string>
    <string name="pincode">Pincode</string>
    <string name="landmark">Landmark</string>
    <string name="address_type">Address Type</string>
    <string name="other">Other</string>
    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="make_this_my_default_address">Make this my default address</string>
    <string name="select_address">Select Address</string>
    <string name="ok">OK</string>
    <string name="add_new_address">Add new address</string>
    <string name="save_continue">Save and Continue</string>
    <string name="edit">Edit</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="share">Share</string>
    <string name="refer_a_friend_and_earn_money">Refer a friend &amp; earn money</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="others">Others</string>
    <string name="favourites">Favourites</string>
    <string name="faq">FAQ</string>
    <string name="view_all">View All</string>
    <string name="blogs">Blogs</string>
    <string name="order_medicines">Order Medicines</string>
    <string name="order_medicines_via_rx">Order Medicines Via Prescription</string>
    <string name="medicines">Medicines</string>
    <string name="reminders">Reminders</string>
    <string name="book_lab_tests">Book Lab Tests</string>
    <string name="labs">Labs</string>
    <string name="consult_doctors">Consult Doctors</string>
    <string name="doctors">Doctors</string>
    <string name="my_account">My Account</string>
    <string name="my_appointment">My Appointment</string>
    <string name="legal_information">Legal information</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="my_prescription">My Prescription</string>
    <string name="find_doctors">Find Doctors</string>
    <string name="set_reminder">Add a reminder</string>
    <string name="wishlist">Wishlist</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="book_lab">Book Lab</string>
    <string name="order_now">Order Now</string>
    <string name="cart">Cart</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="no_appointment_booked">You don\'t have any appointments</string>
    <string name="no_lab_record">No lab records found</string>
    <string name="no_available_order">No orders placed yet</string>
    <string name="no_reminder_set">You have no reminders</string>
    <string name="book_now">Book Now</string>
    <string name="reminder_desc">Set a reminder for medicines.</string>
    <string name="order_desc">All your orders will be displayed here.</string>
    <string name="order_desc_lab">All your bookings will be displayed here.</string>
    <string name="order_desc_appointment">All your appointments will be displayed here.</string>
    <string name="view_profile">View Profile</string>
    <string name="consultation_fees">Consultation fees </string>
    <string name="patient_mobile">Patient\'s Mobile</string>
    <string name="confirm">Confirm</string>
    <string name="patient_name">Patient\'s Full Name</string>
    <string name="patient_email">Patient\'s Email</string>
    <string name="someone_other">Someone else</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="done">Done</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="share_experience">Share Experience</string>
    <string name="doctor_profile">Doctor\'s Profile</string>
    <string name="all_blogs">All Blog</string>
    <string name="search_for_medicines_and_healthcare_products">Search for medicines &amp; healthcare products</string>
    <string name="drugvilla">Drugvilla</string>
    <string name="upload">Upload</string>
    <string name="select">Select</string>
    <string name="prescription_for_healthy_life_right_choice">Prescription for healthy life = Right Choice.</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="saved_address">Saved Address</string>
    <string name="search_doctors">Search doctors, specialist, clinics, hospitals</string>
    <string name="no_favourite">No favourites found</string>
    <string name="view_details">View  Details</string>
    <string name="time_slot">Time Slot</string>
    <string name="buy_pack">Buy Pack</string>
    <string name="dummy_text2">It is a long established fact that a reader will be distracted by the readable.</string>
    <string name="dummy_date">21st Nov 2019</string>
    <string name="dummy_time">06:00 pm</string>
    <string name="dummy_price">400</string>
    <string name="dummy_lab_name">By Sure path labs pvt ltd</string>
    <string name="dummy_username">Priya Yadav</string>
    <string name="order_id_08987ytv8697785665">Order Id : 08987YTV8697785665</string>
    <string name="dummy_med_name">Gabaneuron Tablet</string>
    <string name="_8_off">8% off</string>
    <string name="pack_of_2">Pack of 2</string>
    <string name="reply">Reply</string>
    <string name="dummy_date_time">22 jan 2019, 09:00 AM</string>
    <string name="processing">Processing</string>
    <string name="reply_to_rahul_mahajan">Reply to Rahul Mahajan</string>
</resources>