<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription,RtlSymmetry,UnusedAttribute">


    <RelativeLayout
        android:id="@+id/llPackage"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/back_white"
        android:elevation="@dimen/_2sdp">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_7sdp"
            android:src="@drawable/med1" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivProduct"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/dummy_med_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_11ssp" />


        <TextView
            android:id="@+id/tvBy"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvProductName"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/assistant_semibold"
            android:maxLines="2"
            android:text="@string/dummy_lab_name"
            android:textColor="@color/lightGray"
            android:textSize="@dimen/_10ssp" />


        <TextView
            android:id="@+id/MRP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBy"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/MRP"
            android:textColor="@color/lightGray"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/tvMRP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@+id/MRP"
            android:fontFamily="@font/assistant_semibold"
            android:paddingStart="@dimen/_2sdp"
            android:layout_below="@+id/tvBy"
            android:text="@string/dummy_price"
            android:textColor="@color/lightGray"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/rs"
            android:layout_below="@+id/tvOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/assistant_semibold"
            android:paddingTop="@dimen/_2sdp"
            android:text="@string/Rs"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_below="@+id/tvOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_toEndOf="@+id/rs"
            android:fontFamily="@font/assistant_semibold"
            android:paddingStart="@dimen/_3sdp"
            android:paddingTop="@dimen/_2sdp"
            android:text="@string/dummy_price"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tvOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_below="@+id/tvBy"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@+id/tvMRP"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/_8_off"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/_10ssp" />

    </RelativeLayout>

</layout>
