<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RelativeOverlap,ContentDescription,RtlSymmetry,UnusedAttribute,UseCompoundDrawables">


    <RelativeLayout
        android:id="@+id/llRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:background="@color/colorWhite">
        <TextView
            android:id="@+id/tvUser"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/round_red"
            android:gravity="center"
            android:text=""
            android:fontFamily="@font/assistant_semibold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_toEndOf="@+id/tvUser"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/dummy_username"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvReplyTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_toEndOf="@+id/tvName"
            android:fontFamily="@font/assistant_regular"
            android:text="@string/reply_to_rahul_mahajan"
            android:textColor="@color/lightGray"
            android:textSize="@dimen/_11ssp" />


        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_option_menu"
            android:tint="@color/lightGray" />

        <TextView
            android:id="@+id/tvComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvReplyTo"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_toEndOf="@+id/tvUser"
            android:fontFamily="@font/assistant_regular"
            android:text="@string/dummy_text2"
            android:textColor="@color/lightBlack"
            android:textSize="@dimen/_11ssp" />


        <ImageView
            android:id="@+id/ivClock"
            android:visibility="gone"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_below="@+id/tvComment"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@+id/tvUser"
            android:src="@drawable/time"
            android:tint="@color/darkGray" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvComment"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_toEndOf="@+id/ivClock"
            android:fontFamily="@font/assistant_regular"
            android:text="@string/dummy_date_time"
            android:textColor="@color/timestamp"
            android:textSize="@dimen/_10ssp" />


        <TextView
            android:id="@+id/tvReply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvComment"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/reply"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_11ssp" />
    </RelativeLayout>

</layout>